--- a/public/sass/components/_navs.scss
+++ b/public/sass/components/_navs.scss
@@ -7,8 +7,7 @@
 // ----------
 
 .nav {
-  margin-left: 0;
-  margin-bottom: $line-height-base;
+  margin: 0;
   list-style: none;
 }
 
